# agent-memory-system-public

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.ko.md  README.md  docker-compose.yml  pyproject.toml
scripts/: benchmark_mvp.py  init_db.py  init_profile.py  rebuild_chroma.py  reindex_chroma.py  render_benchmark_md.py  run_mcp_docker.sh  seed_rules.py
src/: config.py  server.py
src/db/: collections.py  connection.py  indexes.py
src/engine/: chroma_engine.py  compaction_engine.py  memory_engine.py  residual_engine.py  scoring.py  sensitivity_engine.py  topic_engine.py
src/resources/: memory_resources.py
src/tools/: memory_approve.py  memory_compact.py  memory_delete.py  memory_policy.py  memory_recall.py  memory_save.py  memory_summarize.py  memory_update.py  session_digest.py  topic_lookup.py
tests/: test_chroma_engine.py  test_mcp_server_contract.py  test_memory_approve.py  test_memory_compact.py  test_memory_delete.py  test_memory_policy.py  test_memory_recall.py  test_memory_save.py  test_memory_summarize.py  test_memory_update.py  test_recall_golden.py  test_scoring.py  test_server_startup.py  test_session_digest_resources.py  test_topic_lookup.py
